--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,12 +23,17 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
+body {
+  background-color: rgb(253, 253, 253);
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
 
+/* Embla Carousel */
 .embla {
   overflow: hidden;
   width: 100%;
@@ -47,10 +52,7 @@ body {
   width: 100%;
 }
 
-body {
-  background-color: rgb(253, 253, 253);
-}
-
+/* HEADER ANIMATION */
 header {
   &::after {
     content: '';
@@ -69,4 +71,17 @@ header {
     /* transform: scaleX(1); */
     width: 100%;
   }
+}
+
+
+/* Mui Datepicker */
+.MuiStack-root {
+  padding: 0 !important;
+}
+
+
+/* Leaflet */
+.leaflet-container {
+  width: 100%;
+  height: 100%;
 }
