--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,5 +83,7 @@ header {
 /* Leaflet */
 .leaflet-container {
   width: 100%;
-  height: 100%;
+  height: 92%;
+  z-index: 0;
+  border-radius: 10px;
 }
