feat: remove unused libs + change dropdown to shadcn ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,18 @@ body {
   background-color: rgb(253, 253, 253);
 }
 
+html body[data-scroll-locked] {
+  overflow: auto !important;
+  overscroll-behavior: contain;
+  position: relative !important;
+  padding-left: 0px;
+  padding-top: 5rem !important;
+  padding-right: 0px;
+  margin-left: 0;
+  margin-top: 0;
+  margin-right: 0px !important;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -154,6 +166,15 @@ header {
 @layer base {
   * {
     @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
